# Athena-2.0

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_event_classification.py  0003_add_site_vendor_site_id.py  0004_add_event_summary.py
athena/: config.py  main.py
athena/api/: app.py  deps.py
athena/api/routes/: events.py  webhooks.py
athena/db/: engine.py  scoping.py
athena/db/models/: __init__.py  device.py  event.py  site.py  tenant.py
athena/integrations/: domotz_client.py  openai_client.py  twilio_client.py
athena/webhooks/: dedupe.py  domotz.py  signatures.py  unifi.py
athena/worker/: __init__.py  classifier.py  enrichment.py  jobs.py  notifier.py  settings.py  summarizer.py
scripts/: seed_smoke.py
tests/: conftest.py
tests/api/: test_domotz_webhook.py  test_events_endpoint.py  test_unifi_webhook.py
tests/fixtures/unifi/: link_down.json  link_downshift_100mbps.json  poe_lost.json
tests/integration/: test_alembic_migration.py  test_migration_matches_models.py
tests/integrations/: test_domotz_client.py  test_openai_client.py  test_twilio_client.py
tests/scripts/: test_seed_smoke.py
tests/unit/: test_config.py  test_dedupe.py  test_engine.py  test_models_event.py  test_models_tenant_site_device.py  test_scoping.py  test_signatures.py  test_unifi_normalizer.py
tests/worker/: test_classifier.py  test_enrichment.py  test_jobs.py  test_notifier.py  test_summarizer.py
