[project]
name = "athena"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.*",
  "uvicorn[standard]==0.32.*",
  "pydantic==2.9.*",
  "pydantic-settings==2.6.*",
  "sqlalchemy==2.0.*",
  "asyncpg==0.30.*",
  "alembic==1.14.*",
  "arq==0.26.*",
  "redis==5.2.*",
  "httpx>=0.27,<0.29",
  "python-dotenv==1.0.*",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-asyncio>=0.24,<2",
  "pytest-cov==5.0.*",
  "ruff==0.7.*",
  "mypy==1.13.*",
  "fakeredis==2.26.*",
  "aiosqlite==0.20.*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
